// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When actions are dispatched When initializeCharacter is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": Object {
      "id": "foo$id",
      "image": "foo$url",
    },
    "type": "INITIALIZE_CHARACTER",
  },
]
`;

exports[`When actions are dispatched When rateCharacter is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": Object {
      "character": "foo$character",
      "points": 1,
      "rowId": "foo$id",
    },
    "type": "RATE_CHARACTER",
  },
]
`;

exports[`When actions are dispatched When removeCharacter is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "id": "foo$id",
    "type": "REMOVE_CHARACTER",
  },
]
`;

exports[`When actions are dispatched When removeLowestScore is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "REMOVE_LOWEST_SCORE",
  },
]
`;

exports[`When actions are dispatched When resetForFinals is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "type": "RESET_FOR_FINALS",
  },
]
`;

exports[`When actions are dispatched When setPlayers is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "number": 3,
    "type": "SET_PLAYERS",
  },
]
`;

exports[`When actions are dispatched When submitCharacterRatings is dispatched dispatches the correct action and payload 1`] = `
Array [
  Object {
    "payload": Object {
      "players": "foo$players",
    },
    "type": "SUBMIT_CHARACTER_RATINGS",
  },
]
`;
